[tool.poetry]
name = "composer_sandbox"
version = "0.1.0"
description = ""
authors = ["Soichi Sumi <soichi.sumi@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
apache-airflow = {version = "^1.10.10", extras = ["gcp"]}
attr = "^0.3.1"
SQLAlchemy = "1.3.23"
Flask-SQLAlchemy = "2.4.4"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
